# abstop

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-mypy.ini  CHANGELOG.md  README.md  pyproject.toml
abstop/: __init__.py  config.py  experiment_runner.py
abstop-autoprognosis/: pyproject.toml
abstop-autoprognosis/notebooks/: autoprognosis-run-fb2rc1.ipynb
abstop/archiving/: project_archiver.py
abstop/preprocessing/: aggregator.py  antibiotics.py  events.py  featurizer.py  measurements.py  microbiology.py  patient_selector.py
abstop/processing/: feature_selector.py  model_trainer.py
abstop/utils/: converter.py  processing.py
definitions/: lab_selection.csv  medication_selection.csv  microbe_groupings.csv
results/fb2rc1/: corr_feat_x_feat.csv  corr_feat_x_outcome.csv  describe_per_feature__after_boolean_imputation.csv  describe_per_feature__before_boolean_imputation.csv  describe_per_feature_per_hospital__after_boolean_imputation.csv  describe_per_feature_per_hospital__before_boolean_imputation.csv  describe_per_feature_per_outcome__after_boolean_imputation.csv  describe_per_feature_per_outcome__before_boolean_imputation.csv  describe_per_feature_per_outcome_per_hospital__after_boolean_imputation.csv  describe_per_feature_per_outcome_per_hospital__before_boolean_imputation.csv  missing_per_feature__after_boolean_imputation.csv  missing_per_feature__before_boolean_imputation.csv  missing_per_patient__after_boolean_imputation.csv  missing_per_patient__before_boolean_imputation.csv  table1_after_boolean_imputation.csv  table1_before_boolean_imputation.csv  table1_per_hospital__is_vumc_after_boolean_imputation.csv  table1_per_hospital__is_vumc_before_boolean_imputation.csv  table1_per_outcome_after_boolean_imputation.csv  table1_per_outcome_before_boolean_imputation.csv
results/fb2rc1/figures/: heatmap__r__all.csv  heatmap__s__all.csv  restart_events__all__g2.eps
results/fb2rc1/models/: LGBMClassifier__calibrated_scores.csv  LGBMClassifier__cv_results.csv  LGBMClassifier__feature_importance.csv  LGBMClassifier__feature_names_in.pkl  LGBMClassifier__scores.csv  LGBMClassifier__shap_importance_test.csv  LGBMClassifier__shap_importance_train.csv  LGBMClassifier__shap_values_test.pkl  LGBMClassifier__shap_values_train.pkl  LGBMClassifier__tree_info.csv  LogisticRegression__calibrated_scores.csv  LogisticRegression__coefs.csv  LogisticRegression__cv_results.csv  LogisticRegression__scores.csv  kfe_results.csv  optuna.db
results/fb2rc1/models/autoprognosis/autoprognosis/: explainer_shap_importance_test.csv  explainer_shap_importance_train.csv  kfe_autoprognosis.csv  weighted_ensemble__metrics.csv
